[package]
name        = "bevy-wui"
version     = "0.0.0"
edition     = "2021"
authors     = ["TNThung"]
keywords    = ["bevy", "ui", "webview", "winit"]
repository  = "https://github.com/tnthung/bevy-wui"
description = "A integration of Webview for bevy to create HTML based UI"

[dependencies]
tap        = { version = "1.0.1"                              }
wry        = { version = "0.48.1"                             }
bevy       = { git = "https://github.com/bevyengine/bevy.git" } # Wait for #16544 to be released
serde      = { version = "1.0.217", features = ["derive"]     }
serde_json = { version = "1.0.138"                            }
